Added Logger and GET keys handler
