# restapi/operations/key/get_keys_handler.go
@@ -2,6 +2,7 @@ package key
 
 import (
 	"encoding/json"
+	"log"
 
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/mentatxx/traefik-api-key-forward-auth/internal/app"
@@ -20,12 +21,49 @@ func GetKeysHandlerImpl(params GetKeysParams, principal *models.AuthPrincipal) m
 	var filter KeyFilter
 	err := json.Unmarshal([]byte(params.Filter), &filter)
 	if err != nil {
-		return middleware.Error(400, err)
+		return middleware.Error(400, "Invalid filter")
 	}
 
-	result := db.Where(filter).Find(&keys)
+	chain := db.Where(filter).Order("id")
+	if (params.After != nil) && (*params.After != "") {
+		chain = chain.Where("id > ?", *params.After)
+	}
+	if (params.Limit != nil) && (*params.Limit > 0) {
+		chain = chain.Limit(int(*params.Limit))
+	} else {
+		chain = chain.Limit(50)
+	}
+
+	result := chain.Find(&keys)
 	if result.Error != nil {
 		return middleware.Error(500, result.Error)
 	}
-	return NewGetKeysOK().WithPayload(&models.GetKeysResult{})
+	// map result
+	var resultKeys []*models.GetKeysResult
+	for _, key := range keys {
+		attrs, ok := key.Attributes.(*interface{})
+		if !ok {
+			log.Println("GetKeysHandlerImpl: Can not cast Attributes")
+			return middleware.Error(500, "Invalid attributes")
+		}
+		attrsBytesArray, ok := (*attrs).([]byte)
+		if !ok {
+			return middleware.Error(500, "Invalid attributes")
+		}
+		attrsObject := make(map[string]interface{})
+		err := json.Unmarshal(attrsBytesArray, &attrsObject)
+		if err != nil {
+			return middleware.Error(500, err)
+		}
+
+		resultKeys = append(resultKeys, &models.GetKeysResult{
+			ID:             key.ID,
+			Key:            key.Key,
+			OrganizationID: key.OrganizationID,
+			ProjectID:      key.ProjectID,
+			UserID:         key.UserID,
+			Attributes:     attrsObject,
+		})
+	}
+	return NewGetKeysOK().WithPayload(resultKeys)
 }
