# swagger/swagger.yml
@@ -69,7 +69,9 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/GetKeysResult"
+            type: array
+            items:
+              $ref: "#/definitions/GetKeysResult"
         "400":
           description: "Invalid request supplied"
       security:
@@ -147,12 +149,15 @@ definitions:
       projectId:
         type: "string"
         description: "Project ID (optional)"
+        x-nullable: true
       organizationId:
         type: "string"
         description: "Organization ID (optional)"
+        x-nullable: true
       userId:
         type: "string"
         description: "User ID (optional)"
+        x-nullable: true
       attributes:
         type: "object"
         description: "Custom attributes (optional)"
